syntax = "proto3";

option go_package = "../server/grpc";
// option go_package = "../client/grpc";

service FileInfo {
    rpc GetFileInfo(FileReq) returns (RegularFileInfo) {};
    rpc GetDirFileInfo(FileReq) returns (DirFileInfoList) {};
}

message FileReq {
    string filePath = 1;
}

message RegularFileInfo { 
    string path = 1;
    string name = 2;
    bool isDir = 3;
    uint64 size = 4;  // bytes
    uint32 mode = 5;
    string userName = 6;
    string groupName = 7;
    string createTime = 8;
    string modifyTime = 9;
    string lastOpenTime = 10;
}

message DirFileInfoList {
    string path = 1;
    repeated RegularFileInfo fileInfoList = 2;
}